--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,6 +45,17 @@ jobs:
             ./integration-test.sh
           done
 
+  build_nix:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: nix build
+        run: nix build .
+      - name: Print --help
+        run: nix run . -- --help
+
   style_checks:
     runs-on: ubuntu-latest
     steps:
