cargo: fix license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.85.1"
 keywords = ["fcntl", "file-locking", "unix", "posix"]
 categories = ["command-line-utilities", "filesystem"]
 readme = "README.md"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/phip1611/fcntl-tool"
 repository = "https://github.com/phip1611/fcntl-tool"
 documentation = "https://docs.rs/fcntl-tool"
